--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -6,10 +6,10 @@
     <title>Mybrary</title>
 </head>
 <body>
-    Before <!--Some before text-->
-    <br>
-    <%- body %> <!--include everything else inside this body tag. Create a new file named index.ejs inside the view folder-->
-    <br>
-    After <!--Some after text-->
+    <!-- include the partials header here -->
+    <%- include('../partials/header.ejs') %> 
+    <%- include('../partials/errorMessage.ejs') %> 
+    <!--include everything else inside this body tag. Create a new file named index.ejs inside the views folder-->
+    <%- body %>
 </body>
 </html>
